[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sorting-gym"
version = "0.0.8"
description = "OpenAI Gym Environments for Sorting"
authors = ["Brian Thorne <brian@hardbyte.nz>"]
repository = "https://github.com/hardbyte/sorting-gym"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">3.7"
numpy = "^1.19.0"
gym = "^0.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hardbyte/sorting-gym/issues"
