[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorting-gym"
version = "0.1.0"
description = "Gymnasium Environments for Sorting"
authors = [{name = "Brian Thorne", email = "brian@hardbyte.nz"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=1.0",
]

[project.urls]
Repository = "https://github.com/hardbyte/sorting-gym"
"Bug Tracker" = "https://github.com/hardbyte/sorting-gym/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
